--- a/final_proj.Rmd
+++ b/final_proj.Rmd
@@ -7,7 +7,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(mvtnorm)
 ```
 
 **Work for 2.12-4.12:**
@@ -224,26 +223,27 @@ In order to have valid comparisons across all of our methods and validate their 
 
 ### 3.1 Comparison with respect to noise
 
-### 3.2 Comparison with respect to initial covariance matrix (rank and spectral shape)
+### 3.2 Comparison with respect to initial covariance matrix 
+(rank and spectral shape)
 
 ## 4. Other PCs number selection methods
 
 ### 4.1 Percentage of variance explained method
 
-The percentage of variance explained method is based on the dataset's covariance matrix, and its eigenvalues and the total variability (sum of diagonal entries of the covariance matrix). When computing the PCs for a given dataset $\mathbf{X} \in \mathbb{R}^{N \times p}$ of covariance $\Sigma$, we create an orthonormal basis with a corresponding diagonal covariance matrix $\Sigma_{PCA}$ with its entries being the eigenvalues of corresponding PCs. As we sequentially construct the components, the eigenvalues $\lambda_1, \lambda_2, ... ,\lambda_p \in \mathbb{R}$ will be a decreasing sequence. The method of percentage of variance explained is simply to select the first $r$ components such that $\frac{1}{V}\sum_{i=1}^r \lambda_i \ge \tau$ for an arbitrary threshold $\tau \in [0,1]$ and a total variability $V = \sum_{i=1}^p \lambda_i = trace(\Sigma_{PCA})$.
+The percentage of variance explained method is based on the dataset's covariance matrix, and its eigenvalues and the total variability (sum of diagonal entries of the covariance matrix). When computing the PCs for a given dataset $\mathbf{X} \in \mathbb{R}^{N \times p}$ of covariance $\Sigma$, we create an orthonormal basis with a corresponding diagonal covariance matrix $\Sigma_{PCA}$ with its entries being the eigenvalues of corresponding PCs. As we sequentially construct the components, the eigenvalues $\lambda_1, \lambda_2, ... ,\lambda_p \in \mathbb{R}$ will be a decreasing sequence. The method of percentage of variance explained is simply to select the first $r$ components such that $\frac{1}{V}\sum_{i=1}^r \lambda_i \ge \tau$ for an arbitrary threshold $\tau \in [0,1]$ and a total variability $V = \sum_{i=1}^p \lambda_i = tr(\Sigma_{PCA})$.
+
+-> INSERT PLOTS
 
 ### 4.2 Scree-plot method (non-automatic)
 
-The Scree-plot is again related to the eigenvalues of the newly created orthonormal basis of PCs. As shown in the previous sub-section, the eigenvalues corresponding to the PCs are a decreasing sequence, so we get a graph as below when plotting the PCs index vs the eigenvalue :
+The Scree-plot is again related to the eigenvalues of the newly created orthonormal basis of PCs. As shown in the previous sub-section, the eigenvalues corresponding to the PCs are a decreasing sequence, so we get a graph as below when plotting the PCs index vs the eigenvalue. The Scree-plot method consists of choosing the value of $r$ which corresponds to the elbow of the eigenvalue graph.
 
-```{r, echo=F, out.width='50%', fig.align='center'}
-knitr::include_graphics('./Figures/scree_plot_example.png')
-```
-
-The Scree-plot method consists of choosing the value of $r$ which corresponds to the elbow of the eigenvalue graph. In this example, the optimal value of $r$ is $3$.
+-> INSERT PLOTS
 
 
 ### 4.3 Comparison with CV methods
 Compared to CV methods described in [2. Cross-validation on PCA methods], those methods are relatively easy to implement, efficient as there is only a eigenvalue decomposition of the covariance matrix which is computationnally expensive and pretty interpretable. However, those methods are not well generalizable if there is some missing values in the dataset or if the eigenvalues do not follow a clear elbow pattern (for the scree-plot).
 
 ## 5. Conclusion
+
+In conclusion, several methods for choosing the optimal number of components has been presented. We could observe the behavior of those CV methods depending on the noise and the structure of covariance matrices thanks to simulation on various datasets. We concluded that some methods are more robust to noise (EXAMPLE) while other tend to give poor results when confronted to noise (EXAMPLE). Moreover, we had to assume that our dataset was a centered multivariate Gaussian for every method to be comparable, however, some methods generalize better to other type of dataset's distribution (Matrix Completion for example) while others are more restrictive (EXAMPLE). Computationwise, some methods are more efficient than others (EXAMPLE) and, assuming that all conditions are met to use those methods, the most efficient ones are therefore favoured when working for bigger datasets.
